# crawlds

./: .gitignore  CHANGELOG.md  README.md  install.sh
core/: Cargo.toml  README.md
core/assets/config/: core.toml
core/assets/systemd/: crawlds.service
core/assets/templates/: code.json  emacs.el  wezterm.toml  zed.json
core/assets/themes/: Ayu.json  Ayu.toml  Catppuccin.json  Catppuccin.toml  Crawlds.json  Crawlds.toml  Dracula.json  Dracula.toml  Eldritch.json  Eldritch.toml  Ember.json  Ember.toml  Gruvbox.json  Gruvbox.toml  Kanagawa.json  Kanagawa.toml  Nord.json  Nord.toml  Rosepine.json  Rosepine.toml  Tokyo-Night.json  Tokyo-Night.toml  Uwunicorn.json  Uwunicorn.toml
core/crates/crawlds-bluetooth/: Cargo.toml
core/crates/crawlds-bluetooth/src/: lib.rs
core/crates/crawlds-cli/: Cargo.toml  build.rs
core/crates/crawlds-cli/src/: client.rs  main.rs  output.rs
core/crates/crawlds-cli/src/client/: json_rpc.rs  mod.rs  subscribe.rs
core/crates/crawlds-cli/src/cmd/: bluetooth.rs  brightness.rs  clipboard.rs  daemon.rs  disk.rs  greeter.rs  mod.rs  network.rs  notify.rs  power.rs  proc_.rs  shell.rs  sysmon.rs
core/crates/crawlds-clipboard/: Cargo.toml
core/crates/crawlds-clipboard/src/: config.rs  history.rs  lib.rs  storage.rs  wayland.rs
core/crates/crawlds-daemon/: Cargo.toml
core/crates/crawlds-daemon/src/: config.rs  json_server.rs  main.rs  state.rs
core/crates/crawlds-display/: Cargo.toml
core/crates/crawlds-display/src/: brightness.rs  config.rs  lib.rs  nightlight.rs  wallpaper.rs
core/crates/crawlds-display/src/wallpaper/: models.rs  service.rs
core/crates/crawlds-display/src/wallpaper/backend/: mod.rs  swww.rs
core/crates/crawlds-greeter/: Cargo.toml
core/crates/crawlds-greeter/src/: bin.rs  config.rs  external.rs  greetd.rs  lib.rs  memory.rs  pam.rs  types.rs
core/crates/crawlds-ipc/: Cargo.toml
core/crates/crawlds-ipc/src/: error.rs  events.rs  lib.rs  types.rs
core/crates/crawlds-network/: Cargo.toml
core/crates/crawlds-network/src/: dbus.rs  ethernet.rs  hotspot.rs  lib.rs  state.rs  sysfs.rs  wifi.rs
core/crates/crawlds-notify/: Cargo.toml
core/crates/crawlds-notify/src/: lib.rs
core/crates/crawlds-power/: Cargo.toml
core/crates/crawlds-power/src/: idle.rs  lib.rs
core/crates/crawlds-proc/: Cargo.toml
core/crates/crawlds-proc/src/: lib.rs
core/crates/crawlds-scheduler/: Cargo.toml
core/crates/crawlds-scheduler/src/: blocking.rs  lib.rs  scheduler.rs  task.rs
core/crates/crawlds-sysmon/: Cargo.toml
core/crates/crawlds-sysmon/src/: lib.rs
core/crates/crawlds-system/: Cargo.toml
core/crates/crawlds-system/src/: compositor.rs  display.rs  hardware.rs  lib.rs  models.rs  os.rs  service.rs  session.rs
core/crates/crawlds-theme/: Cargo.toml
core/crates/crawlds-theme/src/: config.rs  error.rs  lib.rs  manager.rs  types.rs
core/crates/crawlds-theme/src/dynamic/: generator.rs  matugen.rs  mod.rs
core/crates/crawlds-theme/src/dynamic/generator/: mod.rs
core/crates/crawlds-theme/src/dynamic/hct/: cam16.rs  hct.rs  lab.rs  mod.rs  tonal.rs
core/crates/crawlds-theme/src/dynamic/quantizer/: mod.rs  score.rs  wsmeans.rs  wu.rs
core/crates/crawlds-theme/src/dynamic/scheme/: content.rs  faithful.rs  fruit_salad.rs  mod.rs  monochrome.rs  muted.rs  rainbow.rs  tonal_spot.rs  tones.rs  vibrant.rs
core/crates/crawlds-theme/src/dynamic/terminal/: alacritty.rs  foot.rs  ghostty.rs  kitty.rs  mod.rs  wezterm.rs
core/crates/crawlds-theme/src/generic/: loader.rs  mod.rs
core/crates/crawlds-theme/src/static/: loader.rs  manager.rs  mod.rs
core/crates/crawlds-theme/src/template/: app.rs  apply.rs  apps.rs  mod.rs  renderer.rs
core/crates/crawlds-vfs/: Cargo.toml
core/crates/crawlds-vfs/src/: disk.rs  error.rs  fs.rs  lib.rs  ops.rs  preload.rs  search.rs  types.rs  watcher.rs
core/crates/crawlds-webservice/: Cargo.toml
core/crates/crawlds-webservice/src/: config.rs  http_client.rs  lib.rs  rss.rs  wallhaven.rs
core/docs/: ARCHITECTURE.md  CLI.md  CRAWLDS_IPC.md  CRAWLDS_NETWORK.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  QUICKSHELL.md
docs/: BLUETOOTH.md  CLI.md  CLIPBOARD.md  DAEMON.md  DISPLAY.md  FILESYSTEM.md  GREETER.md  IPC.md  NETWORK.md  NOTIFICATION.md  PORTAL.md  POWER.md  PROCESSES.md  SCHEDULER.md  SYSMONITOR.md  SYSTEMINFO.md  THEME.md  VERSION.md  WEBSERVICE.md
quickshell/: CREDITS.md  README.md  shell.qml
quickshell/Assets/: crawlds-open.desktop  settings-default.json  settings-search-index.json  settings-widgets-default.json  shell.toml
quickshell/Assets/Icons/: 1.icon.txt  2.icon.txt
quickshell/Assets/Templates/: btop.theme  discord-material.css  discord-midnight.css  fuzzel.conf  gtk3.css  gtk4.css  kcolorscheme.colors  mango.conf  telegram.tdesktop-theme  vicinae.toml
quickshell/Assets/layouts/: dockbar.json  gnome.json  gnome_floating.json  macos.json  minipanel.json  super_dock.json  windows_11.json
quickshell/Common/: Color.qml  Icons.qml  IconsTabler.qml  Logger.qml  Settings.qml  ShellState.qml  Style.qml  ThemeIcons.qml  Time.qml
quickshell/Common/Helpers/: AdvancedMath.js
quickshell/Common/Migrations/: Migration36.qml  Migration38.qml  Migration44.qml  Migration46.qml  Migration47.qml  Migration49.qml
quickshell/Modules/Bar/: Bar.qml
quickshell/Modules/Cards/: AudioCard.qml  BluetoothCard.qml  BrightnessCard.qml  CalendarHeaderCard.qml  (+7 more)
quickshell/Widgets/: NBattery.qml  NBox.qml  NBusyIndicator.qml  NButton.qml  NCheckbox.qml  NCircleStat.qml  NClock.qml  NCollapsible.qml  NColorChoice.qml  NColorPicker.qml  NColorPickerDialog.qml  NColorSlider.qml  NComboBox.qml  NContextMenu.qml  NDateTimeTokens.qml  NDivider.qml  NDropShadow.qml  NFilePicker.qml  NGraph.qml  NGridView.qml  NHeader.qml  NIcon.qml  NIconButton.qml  NIconButtonHot.qml  NIconPicker.qml  NImageRounded.qml  NInputAction.qml  NKeybindRecorder.qml  NLabel.qml  NListView.qml  NPluginSettingsPopup.qml  NPopupContextMenu.qml  NRadioButton.qml  NReorderCheckboxes.qml  NScrollText.qml  NScrollView.qml  NSearchableComboBox.qml  NSectionEditor.qml  NSettingsIndicator.qml  NSlider.qml  (+10 more)
(+274 files in other folders)
