[workspace]
members = [
    "crates/crawlds-daemon",
    "crates/crawlds-cli",
    "crates/crawlds-ipc",
    "crates/crawlds-bluetooth",
    "crates/crawlds-network",
    "crates/crawlds-notify",
    "crates/crawlds-clipboard",
    "crates/crawlds-sysmon",
    "crates/crawlds-display",
    "crates/crawlds-proc",
    "crates/crawlds-power",
    "crates/crawlds-vfs",
    "crates/crawlds-webservice",
    "crates/crawlds-greeter",
    "crates/crawlds-theme",
    "crates/crawlds-scheduler",
    "crates/crawlds-system",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (Unix socket server)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# greetd IPC (greeter backend)
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }

# Error handling
thiserror = "1"
anyhow = "1"
color-eyre = "0.6"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# D-Bus
zbus = { version = "4", features = ["tokio"] }

# Filesystem
nix = { version = "0.27", features = ["fs"] }
walkdir = "2"
notify = "8"
notify-types = "2"
infer = "0.16"
trash = "5"

# Search
tantivy = "0.22"
sled = "0.34"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }
shellexpand = "3.1"

# Futures
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-test = "0.4"
pin-project-lite = "0.2"

# Shared types (internal)
crawlds-ipc = { path = "crates/crawlds-ipc" }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Enosh"]
license = "MIT"
repository = "https://github.com/me-osano/crawlds"
