[package]
name = "crawlds-greeter"
description = "CrawlDS Greeter - greetd integration with PAM support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crawlds-ipc.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zbus.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
greetd_ipc.workspace = true
dirs = "5"
clap.workspace = true
once_cell = "1"

[dev-dependencies]
tokio-test.workspace = true
