[package]
name = "crawlds-ipc"
description = "Shared IPC types, error envelope, and event models for crawlds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zbus = { workspace = true }
