[package]
name = "crawlds-theme"
description = "Material You theme generation with HCT color space"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tokio = { workspace = true, features = ["fs", "io-util"] }
crawlds-ipc = { workspace = true }
walkdir = "2"
toml = "0.8"
regex = "1"

[dev-dependencies]
criterion = "0.5"
image = "0.25"