[package]
name = "crawlds-webservice"
description = "RSS feeds and Wallhaven API integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crawlds-ipc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
feed-rs = "2"
once_cell = "1"
